@@ -14,12 +14,19 @@ COPY --from=buildtime /build/target/*.jar application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
 
-FROM ghcr.io/pagopa/docker-base-springboot-openjdk17:v2.0.0
-#ADD --chown=spring:spring https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.25.1/opentelemetry-javaagent.jar .
+FROM eclipse-temurin:17-jre@sha256:0adcf8486107fbd706de4b4fdde64c2d2e3ead4c689b2fb7ae4947010e1f00b4
+
+RUN addgroup spring
+RUN useradd -g spring spring
+USER spring:spring
+
+# https://github.com/microsoft/ApplicationInsights-Java/releases
+ADD --chown=spring:spring https://github.com/microsoft/ApplicationInsights-Java/releases/download/3.4.19/applicationinsights-agent-3.4.19.jar /applicationinsights-agent.jar
+COPY --chown=spring:spring docker/applicationinsights.json ./applicationinsights.json
+COPY --chown=spring:spring docker/run.sh ./run.sh
 
 COPY --chown=spring:spring  --from=builder dependencies/ ./
 COPY --chown=spring:spring  --from=builder snapshot-dependencies/ ./
-COPY --chown=spring:spring docker/applicationinsights.json ./applicationinsights.json
 
 # https://github.com/moby/moby/issues/37965#issuecomment-426853382
 RUN true
@@ -28,4 +35,5 @@ COPY --chown=spring:spring  --from=builder application/ ./
 
 EXPOSE 8080
 
-#ENTRYPOINT ["java","-javaagent:opentelemetry-javaagent.jar","--enable-preview","org.springframework.boot.loader.JarLauncher"]
+RUN chmod +x ./run.sh
+ENTRYPOINT ["./run.sh"]
